{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 43,
  "lineage": "a539a5dc-037e-6b52-349e-f0bb6afe92b2",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821830909031:internet-gateway/igw-0267700bc1e89c35f",
            "id": "igw-0267700bc1e89c35f",
            "owner_id": "821830909031",
            "vpc_id": "vpc-0bffbab8ad1a47802"
          },
          "dependencies": [
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "access_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0267700bc1e89c35f",
            "id": "r-rtb-07d243d9e80dc9f361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d243d9e80dc9f36",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821830909031:route-table/rtb-07d243d9e80dc9f36",
            "id": "rtb-07d243d9e80dc9f36",
            "owner_id": "821830909031",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bffbab8ad1a47802"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09afc1309d830b918",
            "route_table_id": "rtb-07d243d9e80dc9f36",
            "subnet_id": "subnet-04d013d59b92163cf"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.publicSUBNET1A",
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821830909031:security-group/sg-059b0c7992e231e2b",
            "description": "Public internet access",
            "egress": [],
            "id": "sg-059b0c7992e231e2b",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "821830909031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bffbab8ad1a47802"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3175182912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-059b0c7992e231e2b",
            "security_group_rule_id": "sgr-016015500f88dea59",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.public",
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3897655462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-059b0c7992e231e2b",
            "security_group_rule_id": "sgr-011c8761ec388d5eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.public",
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3400345012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-059b0c7992e231e2b",
            "security_group_rule_id": "sgr-0e987f02897d564ab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.public",
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-197865461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-059b0c7992e231e2b",
            "security_group_rule_id": "sgr-05c4f6e3dd3d6b704",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.public",
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-851464216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-059b0c7992e231e2b",
            "security_group_rule_id": "sgr-08a9b09c29f94962c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.public",
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSUBNET1A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821830909031:subnet/subnet-04d013d59b92163cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d013d59b92163cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821830909031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LAB-Subnet-Public-1A"
            },
            "tags_all": {
              "Name": "LAB-Subnet-Public-1A"
            },
            "vpc_id": "vpc-0bffbab8ad1a47802"
          },
          "dependencies": [
            "module.network.aws_vpc.vpcMAIN"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcMAIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821830909031:vpc/vpc-0bffbab8ad1a47802",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdea9dabf4b8e39d",
            "default_route_table_id": "rtb-0bc693e093639e112",
            "default_security_group_id": "sg-0da80a55d7d9b7fcf",
            "dhcp_options_id": "dopt-0924a5205cf16679a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bffbab8ad1a47802",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc693e093639e112",
            "owner_id": "821830909031",
            "tags": {
              "Name": "LAB-VPC"
            },
            "tags_all": {
              "Name": "LAB-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.servidor",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:821830909031:instance/i-0baaf7e42a22659c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0baaf7e42a22659c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-class-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-074c2e71b04745ee8",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-34-205-247-65.compute-1.amazonaws.com",
            "public_ip": "34.205.247.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043b8b30650da2443",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d013d59b92163cf",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059b0c7992e231e2b"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.public",
            "module.network.aws_subnet.publicSUBNET1A",
            "module.network.aws_vpc.vpcMAIN",
            "module.servidor.data.aws_ami.ubuntu"
          ]
        }
      ]
    }
  ]
}